tests/fixtures/errors/e0104_read_instance_input.mimz
// expect: E0104
module Child {
  in a: bit
  out z: bit
  z = a
}
module M {
  in x: bit
  out y: bit
  let c = Child() { a: x }
  y = c.a
}
